--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -60,3 +60,20 @@
   width: 31.3%;
   margin: 1%;
 }
+.videoSobre .container {
+    display: flex;
+}
+
+/*Responsive*/
+
+.headerPrincipal .container {
+    flex-direction: column;
+}
+.headerPrincipal-nav {
+    flex-direction: column;
+}
+@media (max-whidth) {
+
+    
+    
+}
